[package]
name = "http_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
anyhow = "1.0"
#thiserror = "1.0"
pest_derive = "2.0"
http_request = { git = "https://github.com/CMIW/http_request.git" }
http_response = { git = "https://github.com/CMIW/http_response.git" }
